# hyperlane-monorepo

rust/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/: adapter.rs  instruction.rs  lib.rs  main.rs
